fix height on mobile menu

--- a/assets/sass/layout/_main-menu.scss
+++ b/assets/sass/layout/_main-menu.scss
@@ -162,6 +162,7 @@
     left: 0;
     transform: translatey(-100%);
     text-align: center;
+    height: fit-content;
     
     .open & {
       transform: translatey(0%);  
